@@ -108,6 +108,7 @@ PyCode_New(int argcount, int kwonlyargcount,
 		Py_INCREF(lnotab);
 		co->co_lnotab = lnotab;
                 co->co_zombieframe = NULL;
+		co->co_weakreflist = NULL;
 	}
 	return co;
 }
@@ -331,6 +332,8 @@ code_dealloc(PyCodeObject *co)
 	Py_XDECREF(co->co_lnotab);
         if (co->co_zombieframe != NULL)
                 PyObject_GC_Del(co->co_zombieframe);
+	if (co->co_weakreflist != NULL)
+		PyObject_ClearWeakRefs((PyObject*)co);
 	PyObject_DEL(co);
 }
 
@@ -462,7 +465,7 @@ PyTypeObject PyCode_Type = {
 	0,				/* tp_traverse */
 	0,				/* tp_clear */
 	code_richcompare,		/* tp_richcompare */
-	0,				/* tp_weaklistoffset */
+	offsetof(PyCodeObject, co_weakreflist),	/* tp_weaklistoffset */
 	0,				/* tp_iter */
 	0,				/* tp_iternext */
 	0,				/* tp_methods */
